--- a/html/galeria.html
+++ b/html/galeria.html
@@ -15,7 +15,7 @@
   <div class="menu-container"> <!-- Contenedor exclusivo para el menú -->
     <nav class="navbar">
       <a href="#" class="logo">
-        <img src="../img/LOGO.png" alt="" width="60" height="50">
+        <img src=".../img/25aniversari.jpeg" alt="" width="100" height="50">
       </a>
       <input type="checkbox" id="toggler">
       <label for="toggler"><i class="ri-menu-line"></i>☰</label>
