--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="menu-container"> <!-- Contenedor exclusivo para el menú -->
       <nav class="navbar">
         <a href="#" class="logo">
-          <img src="img/LOGO.png" alt="" width="60" height="50">
+          <img src="img/25aniversari.jpeg" alt="" width="100" height="50">
         </a>
         <input type="checkbox" id="toggler">
         <label for="toggler"><i class="ri-menu-line"></i>☰</label>
@@ -55,7 +55,7 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/IMG_9148.jpg" class="d-block w-100" alt="...">
+              <img src="img/logo25.jpeg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
               <img src="img/20240706_100636.jpg" class="d-block w-100" alt="...">
