--- a/html/contacte.html
+++ b/html/contacte.html
@@ -74,7 +74,7 @@
       <!-- Contenedor del formulario -->
       <div class="form-container">
         <h1>Formulari de Contacte</h1>
-        <form action="send_email.php" method="POST">
+        <form action="../send_email.php" method="POST">
           <div class="form-group">
             <label for="name">Nom:</label>
             <input type="text" id="name" name="name" required>
@@ -84,7 +84,7 @@
             <input type="email" id="email" name="email" required>
           </div>
           <div class="form-group">
-            <label for="phone">Telefono (Espanya):</label>
+            <label for="phone">Telèfon (Espanya):</label>
             <input type="tel" id="phone" name="phone" pattern="^(?:\+34|0034|34)?[6789]\d{8}$" required placeholder="+34 612345678">
             <small>Ha de ser un número vàlid a Espanya</small>
           </div>
