--- a/html/quefem.html
+++ b/html/quefem.html
@@ -55,60 +55,89 @@
         <div class="slide" id="slide_1">
             <div class="inner_content">
                 <h1>Activitats de diari</h1>
-                <p>Propostes diverses entre setmana que inclouen reforç escolar, espais de joc, activitats culturals i suport a les famílies.</p>
+                <p id="descripcio">Propostes diverses entre setmana que inclouen reforç escolar, espais de joc, activitats culturals i suport a les famílies.</p>
             </div>
         </div>
 
         <div class="slide" id="slide_2">
             <div class="inner_content">
                 <h1>Activitats de dissabtes</h1>
-                <p>Espai de lleure on infants i joves es troben per jugar, aprendre i compartir experiències mitjançant jocs, tallers i dinàmiques de grup.</p>
+                <p id="descripcio">Espai de lleure on infants i joves es troben de 16 a 19h per jugar, aprendre i compartir experiències mitjançant jocs, tallers i dinàmiques de grup.</p>
             </div>
         </div>
 
         <div class="slide" id="slide_3">
             <div class="inner_content">
                 <h1>Emociona't</h1>
-                <p>Projecte d'alfabetització digital on joves de 14 a 17 anys formen persones adultes mitjançant l'aprenentatge servei.</p>
+                <p id="descripcio">Projecte d'alfabetització digital on joves de 14 a 17 anys formen persones adultes mitjançant l'aprenentatge servei.</p>
             </div>
         </div>
 
         <div class="slide" id="slide_4">
             <div class="inner_content">
                 <h1>Activitats de vacances</h1>
-                <p>Casals d'estiu, primavera i hivern, colònies i rutes per oferir experiències lúdiques i educatives.</p>
+                <p id="descripcio">Casals d'estiu, primavera i hivern, colònies i rutes per oferir experiències lúdiques i educatives.</p>
             </div>
         </div>
 
         <div class="slide" id="slide_5">
             <div class="inner_content">
                 <h1>Reforç escolar</h1>
-                <p>Acompanyament i tècniques d'estudi per facilitar l'aprenentatge.</p>
+                <p id="descripcio">Acompanyament i tècniques d'estudi per facilitar l'aprenentatge.</p>
             </div>
         </div>
 
         <div class="slide" id="slide_6">
             <div class="inner_content">
                 <h1>Festes extraordinàries</h1>
-                <p>Celebrem l'inici de curs, la Castanyada, el Dia Universal pels Drets dels Infants, la Cavalcada de Reis, Carnaval, Sant Jordi i altres activitats comunitàries.</p>
+                <p id="descripcio">Celebrem l'inici de curs, la Castanyada, el Dia Universal pels Drets dels Infants, la Cavalcada de Reis, Carnaval, Sant Jordi i altres activitats comunitàries.</p>
             </div>
         </div>
 
         <div class="slide" id="slide_7">
             <div class="inner_content">
                 <h1>TovaJocs</h1>
-                <p>Espai de joc lliure i gratuït per a infants i famílies al Centre Cívic Les Tovalloles.</p>
+                <p id="descripcio">Espai de joc lliure i gratuït per a infants i famílies al Centre Cívic Les Tovalloles.</p>
             </div>
         </div>
 
         <div class="slide" id="slide_8">
             <div class="inner_content">
                 <h1>Sortides i colònies</h1>
-                <p>Excursions, caps de setmana i estades a la natura per fomentar l'autonomia, la convivència i el respecte pel medi ambient.</p>
+                <p id="descripcio">Excursions, caps de setmana i estades a la natura per fomentar l'autonomia, la convivència i el respecte pel medi ambient.</p>
             </div>
         </div>
     </div>
 </section>
+
+<br>
+
+<div class="gallery-fem">
+  <a href="#img1" class="polaroid">
+    <img src="../img/428702235_3674945419427345_9167308159036274732_n.jpg" alt="">
+  </a>
+
+  <a href="#img2" class="polaroid">
+    <img src="../img/426870481_3669575369964350_7512286186637898370_n.jpg" alt="">
+  </a>
+
+  <a href="#img3" class="polaroid">
+    <img src="../img/450227408_3774733239448562_4530430810145378677_n.jpg" alt="">
+  </a>
+
+  <a href="#img4" class="polaroid">
+    <img src="../img/450695098_3776525909269295_2894418515391701497_n.jpg" alt="">
+  </a>
+
+  <a href="#img5" class="polaroid">
+    <img src="../img/454568344_3798497027072183_5938768377895685035_n.jpg" alt="">
+  </a>
+
+  <a href="#img6" class="polaroid">
+    <img src="../img/488440802_4008683976053486_7709628608307290945_n.jpg" alt="">
+  </a>
+</div>
+
 
 <div class="xarxes">
     <div class="cajita">
