--- a/html/treballa amb nosaltres.html
+++ b/html/treballa amb nosaltres.html
@@ -40,8 +40,8 @@
           <h1 class="textre">Treballa amb Nosaltres</h1>
           </br>
           <h2 class="textre">Forma part de l'equip</h2>
-        </br>
-          <p>Al Club d'Espai Diversitat Lúdica busquem monitors/és i coordinadors/es amb ganes d'educar a través del lleure i formar part d'un equip compromès.</p>
+        
+          <p>Al Club d'Espai Diversitat Lúdica busquem monitors/es i coordinadors/es amb ganes d'educar a través del lleure i formar part d'un equip compromès.</p>
           <p>Si ets una persona dinàmica, responsable i amb motivació per treballar amb infants i joves, t'estem buscant!</p>
       </br>
           <p><b>Monitor/es de lleure</b> per a activitats de dissabtes, casals, colònies i projectes educatius.</p>
@@ -60,7 +60,7 @@
       
         <div class="columna3">
           <div class="foto3">
-            <h2 class="textre">Ets premonitori/a o vols ser-ho?</h2>
+            <h2 class="textre">Ets premonitor/a o vols ser-ho?</h2>
             <p>Si tens ganes de formar-te com a monitor/a, t'oferim un espai d'aprenentatge i acompanyament on podràs aprendre a dinamitzar activitats, treballar en equip i descobrir si aquest és el teu camí.</p>
           </div>
           <div class="foto4"></div>
