--- a/html/galeria.html
+++ b/html/galeria.html
@@ -39,13 +39,16 @@
   <div class="gallery">
       <div class="item item1"><img src="../img/WhatsApp Image 2025-03-27 at 13.24.39.jpeg" alt="Imagen 1"></div>
       <div class="item item2"><img src="../img/WhatsApp Image 2025-03-27 at 13.24.40 (1).jpeg" alt="Imagen 2"></div>
-      <div class="item item3"><img src="../img/WhatsApp Image 2025-03-27 at 13.24.40.jpeg" alt="Imagen 3"></div>
+      <div class="item item3"><img src="../img/453655099_3792619810993238_4257272664675737105_n.jpg" alt="Imagen 3"></div>
       <div class="item item4"><img src="../img/WhatsApp Image 2025-03-03 at 13.52.41 (1).jpeg" alt="Imagen 4"></div>
       <div class="item item5"><img src="../img/WhatsApp Image 2025-03-27 at 13.26.28.jpeg" alt="Imagen 5"></div>
       <div class="item item6"><img src="../img/IMG_9148.jpg" alt="Imagen 6"></div>
       <div class="item item7"><img src="../img/WhatsApp Image 2025-03-27 at 13.23.57.jpeg" alt="Imagen 7"></div>
       <div class="item item8"><img src="../img/WhatsApp Image 2025-03-27 at 13.26.28 (3).jpeg" alt="Imagen 8"></div>
-      <div class="item item9"><img src="../img/20240726_124331.jpg" alt="Imagen 9"></div>
+      <div class="item item9"><img src="../img/451660775_3781183318803554_8655831278243488802_n.jpg" alt="Imagen 9"></div>
+      <div class="item item10"><img src="../img/WhatsApp Image 2025-03-27 at 13.24.40.jpeg" alt="Imagen 10"></div>
+      <div class="item item11"><img src="../img/454475254_3798499807071905_8728535830101478174_n.jpg" alt="Imagen 11"></div>
+      <div class="item item12"><img src="../img/462170966_3854216064833612_9045350277595493481_n.jpg" alt="Imagen 12"></div>
   </div>
   </div>
  
